fixed spacing issue

--- a/public/themes/admin/default/assets/less/style.less
+++ b/public/themes/admin/default/assets/less/style.less
@@ -48,7 +48,7 @@ body {
 /* Algin brand grapic and spacing */
 .brand-sm{
 	padding-right:5px;
-	margin-top:-2px;
+	margin-top:-8px;
 }
 
 
